@@ -24,10 +24,14 @@ import org.zstack.utils.TypeUtils;
 import org.zstack.utils.Utils;
 import org.zstack.utils.gson.JSONObjectUtil;
 import org.zstack.utils.logging.CLogger;
+import org.zstack.zql.ZQL;
+import org.zstack.zql.ZQLContext;
+import org.zstack.zql.ZQLQueryResult;
 
 import static org.zstack.core.Platform.argerr;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.*;
 
@@ -43,6 +47,9 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
     @Autowired
     private ErrorFacade errf;
 
+    public static final String USER_TAG = "__userTag__";
+    public static final String SYSTEM_TAG = "__systemTag__";
+
     private void validateConditions(List<QueryCondition> conditions) {
         for (QueryCondition cond : conditions) {
             // will throw out IllegalArgumentException if op is invalid
@@ -53,19 +60,15 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
     @Override
     public <T> List<T> query(APIQueryMessage msg, Class<T> inventoryClass) {
         validateConditions(msg.getConditions());
-
-        QueryBuilderFactory factory = getFactory(queryBuilderType);
-        QueryBuilder builder = factory.createQueryBuilder();
-        return builder.query(msg, inventoryClass);
+        ZQLQueryResult result = queryUseZQL(msg, inventoryClass);
+        return result.getInventories();
     }
 
     @Override
     public long count(APIQueryMessage msg, Class inventoryClass) {
         validateConditions(msg.getConditions());
-
-        QueryBuilderFactory factory = getFactory(queryBuilderType);
-        QueryBuilder builder = factory.createQueryBuilder();
-        return builder.count(msg, inventoryClass);
+        ZQLQueryResult result = queryUseZQL(msg, inventoryClass);
+        return result.getTotal();
     }
 
     private void populateExtensions() {
@@ -178,6 +181,31 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
     private Map<Class, Method> replySetter = new HashMap<>();
     private Map<Class, AutoQuery> autoQueryMap = new HashMap<>();
 
+    private Method getReplySetter(AutoQuery at) {
+        Class replyClass = at.replyClass();
+        Class inventoryClass = at.inventoryClass();
+        try {
+            Method setter = replySetter.get(inventoryClass);
+            if (setter == null) {
+                setter = replyClass.getDeclaredMethod("setInventories", List.class);
+                if (setter == null) {
+                    throw new OperationFailureException(errf.stringToInternalError(
+                            String.format("query reply[%s] has no method setInventories()", replyClass.getName())
+                    ));
+                }
+                setter.setAccessible(true);
+                replySetter.put(inventoryClass, setter);
+            }
+
+            return setter;
+        } catch (OperationFailureException of) {
+            throw of;
+        } catch (Exception e) {
+            logger.warn(e.getMessage(), e);
+            throw new OperationFailureException(errf.throwableToInternalError(e));
+        }
+    }
+
     private void handle(APIQueryMessage msg) {
         AutoQuery at = autoQueryMap.get(msg.getClass());
         if (at == null) {
@@ -192,8 +220,26 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
 
         Class replyClass = at.replyClass();
         Class inventoryClass = at.inventoryClass();
+
         try {
-            APIQueryReply reply = (APIQueryReply) replyClass.newInstance();
+            APIQueryReply reply = (APIQueryReply) replyClass.getConstructor().newInstance();
+            Method replySetter = getReplySetter(at);
+            ZQLQueryResult result = queryUseZQL(msg, inventoryClass);
+            if (result.getTotal() != null) {
+                reply.setTotal(result.getTotal());
+            }
+            if (result.getInventories() != null) {
+                replySetter.invoke(reply, result.getInventories());
+            }
+            bus.reply(msg, reply);
+        } catch (OperationFailureException of) {
+            throw of;
+        } catch (Exception e) {
+            throw new CloudRuntimeException(e);
+        }
+
+            /*
+        try {
             Method setter = replySetter.get(inventoryClass);
             if (setter == null) {
                 setter = replyClass.getDeclaredMethod("setInventories", List.class);
@@ -226,6 +272,82 @@ public class QueryFacadeImpl extends AbstractService implements QueryFacade, Glo
             logger.warn(e.getMessage(), e);
             throw new OperationFailureException(errf.throwableToInternalError(e));
         }
+            */
+    }
+
+    private String toZQLConditionString(QueryCondition c) {
+        // make every condition value as string, the ZQL
+        // will put them in right type because it knows every field's type
+
+        QueryOp op = QueryOp.valueOf(c.getOp());
+        if (c.getValue() == null) {
+            return String.format("%s %s", c.getName(), c.getOp());
+        } else if (op == QueryOp.IN || op == QueryOp.NOT_IN) {
+            List<String> values = new ArrayList<>();
+            for (String v : c.getValue().split(",")) {
+                values.add(String.format("'%s'", v));
+            }
+
+            return String.format("%s %s (%s)", c.getName(), c.getOp(), StringUtils.join(values, ","));
+        } else {
+            return String.format("%s %s '%s'", c.getName(), c.getOp(), c.getValue());
+        }
+    }
+
+    public ZQLQueryResult queryUseZQL(APIQueryMessage msg, Class inventoryClass) {
+        List<String> sb = new ArrayList<>();
+        sb.add(msg.isCount() ? "count" : "query");
+        sb.add(msg.getFields() == null || msg.getFields().isEmpty() ? ZQL.queryTargetNameFromInventoryClass(inventoryClass) : ZQL.queryTargetNameFromInventoryClass(inventoryClass) + "." + msg.getFields().get(0));
+
+        List<QueryCondition> tagConditions = new ArrayList<>();
+
+        if (msg.getConditions() != null && !msg.getConditions().isEmpty()) {
+            sb.add("where");
+
+            List<String> conds = new ArrayList<>();
+            msg.getConditions().forEach(c -> {
+                if (c.getName().equals(SYSTEM_TAG) || c.getName().equals(USER_TAG)) {
+                    tagConditions.add(c);
+                    return;
+                }
+
+                conds.add(toZQLConditionString(c));
+            });
+
+            sb.add(StringUtils.join(conds, " and "));
+        }
+
+        if (!tagConditions.isEmpty()) {
+            List<String> byConds = new ArrayList<>();
+            tagConditions.forEach(c -> byConds.add(toZQLConditionString(c)));
+            sb.add(String.format("restrict by (%s)", StringUtils.join(byConds, ",")));
+        }
+
+        if (!msg.isCount() && msg.isReplyWithCount()) {
+            sb.add("return with (total)");
+        }
+
+        if (msg.getSortBy() != null) {
+            sb.add(String.format("order by %s %s", msg.getSortBy(), msg.getSortDirection()));
+        }
+
+        if (msg.getLimit() != null) {
+            sb.add(String.format("limit %s", msg.getLimit()));
+        }
+
+        if (msg.getStart() != null) {
+            sb.add(String.format("offset %s", msg.getStart()));
+        }
+
+        ZQLContext.putAPISession(msg.getSession());
+        String text = StringUtils.join(sb, " ");
+        if (logger.isTraceEnabled()) {
+            logger.trace(text);
+        }
+        ZQL zql = ZQL.fromString(text);
+        ZQLQueryResult result = zql.execute();
+        ZQLContext.cleanAPISession();
+        return result;
     }
 
     private void handle(APIGenerateInventoryQueryDetailsMsg msg) {
